--- a/mdnPage/styles.css
+++ b/mdnPage/styles.css
@@ -157,7 +157,7 @@ body {
 .page-content__container {
     margin: 0 auto;
     display: grid;
-    grid-template-columns: minmax(0,1fr) minmax(0,2.5fr) minmax(0,15rem);
+    grid-template-columns: minmax(0, 1fr) minmax(0, 2.5fr) minmax(0, 15rem);
     gap: 3rem;
 }
 
@@ -310,4 +310,97 @@ body {
 .column {
     display: flex;
     flex-direction: column;
+}
+
+@media (min-width: 1440px) {
+
+    .header {
+        position: relative;
+        margin-left: auto;
+        margin-right: auto;
+        width: 1440px;
+    }
+
+    .burger-menu {
+        display: none;
+    }
+
+    .main {
+        width: 1440px;
+        margin-left: auto;
+        margin-right: auto;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .container {
+        display: flex;
+        flex-flow: row wrap;
+        align-items: center;
+        padding-top: 15px;
+    }
+
+    .footer-block {
+        width: 100%;
+        justify-content: center;
+    }
+
+    .footer {
+        width: 1440px;
+    }
+}
+
+@media (min-width: 1093px) and (max-width: 1439px) {
+    .main {
+        margin-right: 20px;
+        margin-left: 20px;
+    }
+
+    .header .container, .header-bottom .container {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    .burger-menu {
+        display: none;
+    }
+
+    .footer {
+        width: 100%;
+    }
+}
+
+@media (max-width: 1092px) {
+    .burger-menu {
+        margin-left: auto;
+    }
+
+    .header {
+        position: relative;
+        width: 100%;
+    }
+
+    .header .container, .header-bottom .container {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    .nav, .theme-changer, .search-bar, .authorize {
+        display: none;
+    }
+
+    .main {
+        width: 100% -40px; /*Так не работает*/
+        margin-left: 20px;
+        margin-right: 20px;
+        display: flex;
+    }
+
+    .main .primary-sidebar {
+        display: none;
+    }
+
+    .footer {
+        width: 100%;
+    }
 }
